--- a/Gabicce_Mare.mw
+++ b/Gabicce_Mare.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Gabicce Mare''' éte 'nu comune [[Italie|tagliáne]] de 5.356 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune de le Marche]]
+[[Category:Comune d'a provinge de Pesaro e Urbino]]
+{{Provinge de Pesaro e Urbino}}
