--- a/Gradara.mw
+++ b/Gradara.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Gradara''' éte 'nu comune [[Italie|tagliáne]] de 4.200 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune de le Marche]]
+[[Category:Comune d'a provinge de Pesaro e Urbino]]
+{{Provinge de Pesaro e Urbino}}
