*Empty MediaWiki Message*

--- a/Isola_del_Piano.mw
+++ b/Isola_del_Piano.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Isola del Piano''' éte 'nu comune [[Italie|tagliáne]] de 663 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune de le Marche]]
+[[Category:Comune d'a provinge de Pesaro e Urbino]]
+{{Provinge de Pesaro e Urbino}}
