--- a/Maiolo.mw
+++ b/Maiolo.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Maiolo''' éte 'nu comune [[Italie|tagliáne]] de 825 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune de le Marche]]
+[[Category:Comune d'a provinge de Pesaro e Urbino]]
+{{Provinge de Pesaro e Urbino}}
 
 [[en:Maiolo]]
 [[eo:Maiolo]]
