*Empty MediaWiki Message*

--- a/Mercatello_sus_a_'u_Metauro.mw
+++ b/Mercatello_sus_a_'u_Metauro.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Mercatello sul Metauro''' éte 'nu comune [[Italie|tagliáne]] de 1.482 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune de le Marche]]
+[[Category:Comune d'a provinge de Pesaro e Urbino]]
+{{Provinge de Pesaro e Urbino}}
