--- a/Mercatino_Conca.mw
+++ b/Mercatino_Conca.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Mercatino Conca''' éte 'nu comune [[Italie|tagliáne]] de 1.097 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune de le Marche]]
+[[Category:Comune d'a provinge de Pesaro e Urbino]]
+{{Provinge de Pesaro e Urbino}}
