--- a/Mondolfo.mw
+++ b/Mondolfo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Mondolfo''' éte 'nu comune [[Italie|tagliáne]] de 11.675 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune de le Marche]]
+[[Category:Comune d'a provinge de Pesaro e Urbino]]
+{{Provinge de Pesaro e Urbino}}
