--- a/Monte_Cerignone.mw
+++ b/Monte_Cerignone.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Monte Cerignone''' éte 'nu comune [[Italie|tagliáne]] de 657 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune de le Marche]]
+[[Category:Comune d'a provinge de Pesaro e Urbino]]
+{{Provinge de Pesaro e Urbino}}
