--- a/Monte_Grimano_Terme.mw
+++ b/Monte_Grimano_Terme.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Monte Grimano Terme''' éte 'nu comune [[Italie|tagliáne]] de 1.201 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune de le Marche]]
+[[Category:Comune d'a provinge de Pesaro e Urbino]]
+{{Provinge de Pesaro e Urbino}}
