*Empty MediaWiki Message*

--- a/Brinnese.mw
+++ b/Brinnese.mw
@@ -30,7 +30,7 @@
 |panorama=HPIM0477.JPG
 }} 
 
-'''Brìnnese''' (tagliàne: ''Brindisi'') éte 'nu comune [[Italie|tagliáne]] de 94.439  crestiáne.
+'''Brìnnese''' (tagliàne: ''Brindisi'') éte 'nu comune [[Italie|tagliáne]] de 94.439  crestiáne, capluèche d'a [[Provinge de Brinnese|provinge]].
 
 [[Category:Comune d'a provinge de Brinnese]]
 [[Category:Comune d'a Pugghie]]
