[[ar:فرانكافيلا فونتانا]]

--- a/Frangaville_Fundane.mw
+++ b/Frangaville_Fundane.mw
@@ -34,6 +34,7 @@
 [[Category:Comune d'a Pugghie]]
 {{Provinge de Brinnese}}
 
+[[ar:فرانكافيلا فونتانا]]
 [[ca:Francavilla Fontana]]
 [[de:Francavilla Fontana]]
 [[en:Francavilla Fontana]]
