--- a/Montecalvo_in_Foglia.mw
+++ b/Montecalvo_in_Foglia.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Montecalvo in Foglia''' éte 'nu comune [[Italie|tagliáne]] de 2.664 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune de le Marche]]
+[[Category:Comune d'a provinge de Pesaro e Urbino]]
+{{Provinge de Pesaro e Urbino}}
