--- a/Montefelcino.mw
+++ b/Montefelcino.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Montefelcino''' éte 'nu comune [[Italie|tagliáne]] de 2.751 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune de le Marche]]
+[[Category:Comune d'a provinge de Pesaro e Urbino]]
+{{Provinge de Pesaro e Urbino}}
