--- a/Montelabbate.mw
+++ b/Montelabbate.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Montelabbate''' éte 'nu comune [[Italie|tagliáne]] de 6.082 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune de le Marche]]
+[[Category:Comune d'a provinge de Pesaro e Urbino]]
+{{Provinge de Pesaro e Urbino}}
