--- a/Montemaggiore_al_Metauro.mw
+++ b/Montemaggiore_al_Metauro.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Montemaggiore al Metauro''' éte 'nu comune [[Italie|tagliáne]] de 2.448 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune de le Marche]]
+[[Category:Comune d'a provinge de Pesaro e Urbino]]
+{{Provinge de Pesaro e Urbino}}
