--- a/Novafeltria.mw
+++ b/Novafeltria.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Novafeltria''' éte 'nu comune [[Italie|tagliáne]] de 7.134 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune de le Marche]]
+[[Category:Comune d'a provinge de Pesaro e Urbino]]
+{{Provinge de Pesaro e Urbino}}
