--- a/Peglio_(PU).mw
+++ b/Peglio_(PU).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Peglio (PU)''' éte 'nu comune [[Italie|tagliáne]] de 730 crestiáne.
-[[Category:Gëografije]]
+'''Peglio''' éte 'nu comune [[Italie|tagliáne]] de 730 crestiáne.
+
+[[Category:Comune de le Marche]]
+[[Category:Comune d'a provinge de Pesaro e Urbino]]
+{{Provinge de Pesaro e Urbino}}
