--- a/Pennabilli.mw
+++ b/Pennabilli.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pennabilli''' éte 'nu comune [[Italie|tagliáne]] de 3.145 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune de le Marche]]
+[[Category:Comune d'a provinge de Pesaro e Urbino]]
+{{Provinge de Pesaro e Urbino}}
