--- a/Piandimeleto.mw
+++ b/Piandimeleto.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Piandimeleto''' éte 'nu comune [[Italie|tagliáne]] de 2.033 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune de le Marche]]
+[[Category:Comune d'a provinge de Pesaro e Urbino]]
+{{Provinge de Pesaro e Urbino}}
