--- a/San_Costanzo.mw
+++ b/San_Costanzo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Costanzo''' éte 'nu comune [[Italie|tagliáne]] de 4.092 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune de le Marche]]
+[[Category:Comune d'a provinge de Pesaro e Urbino]]
+{{Provinge de Pesaro e Urbino}}
