--- a/San_Lorenzo_in_Campo.mw
+++ b/San_Lorenzo_in_Campo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Lorenzo in Campo''' éte 'nu comune [[Italie|tagliáne]] de 3.328 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune de le Marche]]
+[[Category:Comune d'a provinge de Pesaro e Urbino]]
+{{Provinge de Pesaro e Urbino}}
