--- a/San_Leo_(RN).mw
+++ b/San_Leo_(RN).mw
@@ -1,7 +1,9 @@
 {{S}}
 '''San Leo''' éte 'nu comune [[Italie|tagliáne]] de 2.998 crestiáne.
 
-[[Category:Gëografije]]
+[[Category:Comune de le Marche]]
+[[Category:Comune d'a provinge de Pesaro e Urbino]]
+{{Provinge de Pesaro e Urbino}}
 
 [[ca:San Leo]]
 [[de:San Leo]]
