--- a/Sant'Agata_Feltria.mw
+++ b/Sant'Agata_Feltria.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sant'Agata Feltria''' éte 'nu comune [[Italie|tagliáne]] de 2.349 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune de le Marche]]
+[[Category:Comune d'a provinge de Pesaro e Urbino]]
+{{Provinge de Pesaro e Urbino}}
