--- a/Sant'Angelo_in_Lizzola.mw
+++ b/Sant'Angelo_in_Lizzola.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sant'Angelo in Lizzola''' éte 'nu comune [[Italie|tagliáne]] de 6.780 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune de le Marche]]
+[[Category:Comune d'a provinge de Pesaro e Urbino]]
+{{Provinge de Pesaro e Urbino}}
