--- a/Sant'Ippolito_(PU).mw
+++ b/Sant'Ippolito_(PU).mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sant'Ippolito''' éte 'nu comune [[Italie|tagliáne]] de 1.590 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune de le Marche]]
+[[Category:Comune d'a provinge de Pesaro e Urbino]]
+{{Provinge de Pesaro e Urbino}}
