--- a/Sassocorvaro.mw
+++ b/Sassocorvaro.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sassocorvaro''' éte 'nu comune [[Italie|tagliáne]] de 3.457 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune de le Marche]]
+[[Category:Comune d'a provinge de Pesaro e Urbino]]
+{{Provinge de Pesaro e Urbino}}
