--- a/Sassofeltrio.mw
+++ b/Sassofeltrio.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sassofeltrio''' éte 'nu comune [[Italie|tagliáne]] de 1.229 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune de le Marche]]
+[[Category:Comune d'a provinge de Pesaro e Urbino]]
+{{Provinge de Pesaro e Urbino}}
