--- a/Serra_Sant'Abbondio.mw
+++ b/Serra_Sant'Abbondio.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Serra Sant'Abbondio''' éte 'nu comune [[Italie|tagliáne]] de 1.147 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune de le Marche]]
+[[Category:Comune d'a provinge de Pesaro e Urbino]]
+{{Provinge de Pesaro e Urbino}}
