--- a/Tavoleto.mw
+++ b/Tavoleto.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Tavoleto''' éte 'nu comune [[Italie|tagliáne]] de 862 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune de le Marche]]
+[[Category:Comune d'a provinge de Pesaro e Urbino]]
+{{Provinge de Pesaro e Urbino}}
