--- a/Tavullia.mw
+++ b/Tavullia.mw
@@ -1,3 +1,9 @@
 {{S}}
 '''Tavullia''' éte 'nu comune [[Italie|tagliáne]] de 6.725 crestiáne.
-[[Category:Gëografije]]
+
+== Cristiane famose ==
+[[Valendine Rossi]] - cambione d'u munne de motociclisme
+
+[[Category:Comune de le Marche]]
+[[Category:Comune d'a provinge de Pesaro e Urbino]]
+{{Provinge de Pesaro e Urbino}}
