--- a/Cagliari.mw
+++ b/Cagliari.mw
@@ -34,6 +34,8 @@
 '''Cagliari''' éte 'nu comune [[Italie|tagliáne]] de 159.312 crestiáne.
 
 [[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
 
 [[an:Cáller]]
 [[ar:كالياري]]
