--- a/Armungia.mw
+++ b/Armungia.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Armungia''' éte 'nu comune [[Italie|tagliáne]] de 584 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
