--- a/Ballao.mw
+++ b/Ballao.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ballao''' éte 'nu comune [[Italie|tagliáne]] de 971 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
