--- a/Barrali.mw
+++ b/Barrali.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Barrali''' éte 'nu comune [[Italie|tagliáne]] de 1.076 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
