--- a/Castiadas.mw
+++ b/Castiadas.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Castiadas''' éte 'nu comune [[Italie|tagliáne]] de 1.310 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
