--- a/Domus_de_Maria.mw
+++ b/Domus_de_Maria.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Domus de Maria''' éte 'nu comune [[Italie|tagliáne]] de 1.545 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
