--- a/Donorì.mw
+++ b/Donorì.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Donorì''' éte 'nu comune [[Italie|tagliáne]] de 2.138 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
