--- a/Elmas.mw
+++ b/Elmas.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Elmas''' éte 'nu comune [[Italie|tagliáne]] de 8.475 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
