--- a/Escalaplano.mw
+++ b/Escalaplano.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Escalaplano''' éte 'nu comune [[Italie|tagliáne]] de 2.532 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
