--- a/Escolca.mw
+++ b/Escolca.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Escolca''' éte 'nu comune [[Italie|tagliáne]] de 692 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
