--- a/Gesico.mw
+++ b/Gesico.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Gesico''' éte 'nu comune [[Italie|tagliáne]] de 988 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
