--- a/Guasila.mw
+++ b/Guasila.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Guasila''' éte 'nu comune [[Italie|tagliáne]] de 2.968 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
