--- a/Isili.mw
+++ b/Isili.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Isili''' éte 'nu comune [[Italie|tagliáne]] de 3.080 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
