--- a/Mandas.mw
+++ b/Mandas.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Mandas''' éte 'nu comune [[Italie|tagliáne]] de 2700 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
 
 [[an:Mandas]]
 [[de:Mandas]]
