--- a/Maracalagonis.mw
+++ b/Maracalagonis.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Maracalagonis''' éte 'nu comune [[Italie|tagliáne]] de 6.961 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
 
 [[an:Maracalagonis]]
 [[ca:Maracalagonis]]
