--- a/Monastir.mw
+++ b/Monastir.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Monastir''' éte 'nu comune [[Italie|tagliáne]] de 4.496 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
