--- a/Monserrato.mw
+++ b/Monserrato.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Monserrato''' éte 'nu comune [[Italie|tagliáne]] de 20.768 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
