--- a/Muravera.mw
+++ b/Muravera.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Muravera''' éte 'nu comune [[Italie|tagliáne]] de 5.070 al 30/04/2007 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
