--- a/Nurallao.mw
+++ b/Nurallao.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Nurallao''' éte 'nu comune [[Italie|tagliáne]] de 1.431 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
