--- a/Nuraminis.mw
+++ b/Nuraminis.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Nuraminis''' éte 'nu comune [[Italie|tagliáne]] de 2.822 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
