--- a/Nurri.mw
+++ b/Nurri.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Nurri''' éte 'nu comune [[Italie|tagliáne]] de 2.431 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
