--- a/Ortacesus.mw
+++ b/Ortacesus.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ortacesus''' éte 'nu comune [[Italie|tagliáne]] de 1.009 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
