--- a/Pula_(CA).mw
+++ b/Pula_(CA).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Pula (CA)''' éte 'nu comune [[Italie|tagliáne]] de 7.200 crestiáne.
-[[Category:Gëografije]]
+'''Pula''' éte 'nu comune [[Italie|tagliáne]] de 7.200 crestiáne.
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
