--- a/Quartucciu.mw
+++ b/Quartucciu.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Quartucciu''' éte 'nu comune [[Italie|tagliáne]] de 11.418 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
