--- a/Sadali.mw
+++ b/Sadali.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sadali''' éte 'nu comune [[Italie|tagliáne]] de 1.054 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
