--- a/Samatzai.mw
+++ b/Samatzai.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Samatzai''' éte 'nu comune [[Italie|tagliáne]] de 1.746 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
