--- a/San_Nicolò_Gerrei.mw
+++ b/San_Nicolò_Gerrei.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Nicolò Gerrei''' éte 'nu comune [[Italie|tagliáne]] de 977 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
