--- a/San_Basilio_(CA).mw
+++ b/San_Basilio_(CA).mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Basilio''' éte 'nu comune [[Italie|tagliáne]] de 1.414 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
