--- a/San_Sperate.mw
+++ b/San_Sperate.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Sperate''' éte 'nu comune [[Italie|tagliáne]] de 6.821 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
