--- a/San_Vito_(CA).mw
+++ b/San_Vito_(CA).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''San Vito (CA)''' éte 'nu comune [[Italie|tagliáne]] de 3.895 crestiáne.
-[[Category:Gëografije]]
+'''San Vito''' éte 'nu comune [[Italie|tagliáne]] de 3.895 crestiáne.
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
