--- a/Sarroch.mw
+++ b/Sarroch.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sarroch''' éte 'nu comune [[Italie|tagliáne]] de 5.277 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
