--- a/Selargius.mw
+++ b/Selargius.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Selargius''' éte 'nu comune [[Italie|tagliáne]] de 28.548 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
