--- a/Senorbì.mw
+++ b/Senorbì.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Senorbì''' éte 'nu comune [[Italie|tagliáne]] de 4.419 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
