--- a/Serri.mw
+++ b/Serri.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Serri''' éte 'nu comune [[Italie|tagliáne]] de 760 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
