--- a/Sestu.mw
+++ b/Sestu.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sestu''' éte 'nu comune [[Italie|tagliáne]] de 18.237 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
