*Empty MediaWiki Message*

--- a/Settimo_San_Pietro.mw
+++ b/Settimo_San_Pietro.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Settimo San Pietro''' éte 'nu comune [[Italie|tagliáne]] de 5.949 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
