--- a/Siliqua_(CA).mw
+++ b/Siliqua_(CA).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Siliqua (CA)''' éte 'nu comune [[Italie|tagliáne]] de 4.150 crestiáne.
-[[Category:Gëografije]]
+'''Siliqua''' éte 'nu comune [[Italie|tagliáne]] de 4.150 crestiáne.
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
