--- a/Silius.mw
+++ b/Silius.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Silius''' éte 'nu comune [[Italie|tagliáne]] de 1.384 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
