--- a/Sinnai.mw
+++ b/Sinnai.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sinnai''' éte 'nu comune [[Italie|tagliáne]] de 16.068 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
