--- a/Siurgus_Donigala.mw
+++ b/Siurgus_Donigala.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Siurgus Donigala''' éte 'nu comune [[Italie|tagliáne]] de 2.189 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
