--- a/Teulada.mw
+++ b/Teulada.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Teulada''' éte 'nu comune [[Italie|tagliáne]] de 3.988 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Cagliari]]
+{{Provinge de Cagliari}}
