*Empty MediaWiki Message*

--- a/Sassari.mw
+++ b/Sassari.mw
@@ -33,6 +33,8 @@
 '''Sassari''' éte 'nu comune [[Italie|tagliáne]] de 128.611 crestiáne.
 
 [[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
 
 [[an:Sasser]]
 [[ar:ساساري]]
