--- a/Alghero.mw
+++ b/Alghero.mw
@@ -35,6 +35,8 @@
 '''Alghero''' éte 'nu comune [[Italie|tagliáne]] de 42.289 crestiáne.
 
 [[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
 
 [[an:L'Alguer]]
 [[ar:ألغيرو]]
