--- a/Anela.mw
+++ b/Anela.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Anela''' éte 'nu comune [[Italie|tagliáne]] de 817 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
