--- a/Benetutti.mw
+++ b/Benetutti.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Benetutti''' éte 'nu comune [[Italie|tagliáne]] de 2.181 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
