--- a/Bonnanaro.mw
+++ b/Bonnanaro.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Bonnanaro''' éte 'nu comune [[Italie|tagliáne]] de 1.127 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
