--- a/Bonorva.mw
+++ b/Bonorva.mw
@@ -29,4 +29,7 @@
 |sito =  http://www.comunebonorva.com/
 }}
 '''Bonorva''' éte 'nu comune [[Italie|tagliáne]] de 4.106 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
