--- a/Borutta.mw
+++ b/Borutta.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Borutta''' éte 'nu comune [[Italie|tagliáne]] de 318 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
