--- a/Bottidda.mw
+++ b/Bottidda.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Bottidda''' éte 'nu comune [[Italie|tagliáne]] de 804 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
