--- a/Bultei.mw
+++ b/Bultei.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Bultei''' éte 'nu comune [[Italie|tagliáne]] de 1.206 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
