--- a/Bulzi.mw
+++ b/Bulzi.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Bulzi''' éte 'nu comune [[Italie|tagliáne]] de 634 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
