--- a/Cargeghe.mw
+++ b/Cargeghe.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cargeghe''' éte 'nu comune [[Italie|tagliáne]] de 606 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
