--- a/Castelsardo.mw
+++ b/Castelsardo.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Castelsardo''' éte 'nu comune [[Italie|tagliáne]] de 5.570 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
 
 [[an:Casteddu Sardu]]
 [[ca:Castelsardo]]
