--- a/Chiaramonti.mw
+++ b/Chiaramonti.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Chiaramonti''' éte 'nu comune [[Italie|tagliáne]] de 1.915 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
