--- a/Codrongianos.mw
+++ b/Codrongianos.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Codrongianos''' éte 'nu comune [[Italie|tagliáne]] de 1.281 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
