--- a/Cossoine.mw
+++ b/Cossoine.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cossoine''' éte 'nu comune [[Italie|tagliáne]] de 982 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
