Bot: Aggiungo: [[lmo:Ave Maria]]

--- a/Àve_Marije.mw
+++ b/Àve_Marije.mw
@@ -68,6 +68,7 @@ L''''Àvë Marije''' éte 'n'andifene e 'na preghiére.
 [[kw:Hayl Maria]]
 [[la:Ave Maria]]
 [[li:Weesgegroetje]]
+[[lmo:Ave Maria]]
 [[ln:Maria Losáko]]
 [[lt:Sveika, Marija]]
 [[na:A kamawireij uw Maria]]
