--- a/Erula.mw
+++ b/Erula.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Erula''' éte 'nu comune [[Italie|tagliáne]] de 807 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
