--- a/Esporlatu.mw
+++ b/Esporlatu.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Esporlatu''' éte 'nu comune [[Italie|tagliáne]] de 475 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
