--- a/Florinas.mw
+++ b/Florinas.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Florinas''' éte 'nu comune [[Italie|tagliáne]] de 1.574 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
