--- a/Giave.mw
+++ b/Giave.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Giave''' éte 'nu comune [[Italie|tagliáne]] de 692 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
