--- a/Martis.mw
+++ b/Martis.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Martis''' éte 'nu comune [[Italie|tagliáne]] de 630 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
