--- a/Monteleone_Rocca_Doria.mw
+++ b/Monteleone_Rocca_Doria.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Monteleone Rocca Doria''' éte 'nu comune [[Italie|tagliáne]] de 134 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
