--- a/Mores.mw
+++ b/Mores.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Mores''' éte 'nu comune [[Italie|tagliáne]] de 2.074 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
