--- a/Muros.mw
+++ b/Muros.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Muros''' éte 'nu comune [[Italie|tagliáne]] de 754 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
