--- a/Nughedu_San_Nicolò.mw
+++ b/Nughedu_San_Nicolò.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Nughedu San Nicolò''' éte 'nu comune [[Italie|tagliáne]] de 1.017 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
