--- a/Nulvi.mw
+++ b/Nulvi.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Nulvi''' éte 'nu comune [[Italie|tagliáne]] de 3.007 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
