--- a/Olmedo.mw
+++ b/Olmedo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Olmedo''' éte 'nu comune [[Italie|tagliáne]] de 2.852 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
