--- a/Osilo.mw
+++ b/Osilo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Osilo''' éte 'nu comune [[Italie|tagliáne]] de 3.498 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
