--- a/Ossi.mw
+++ b/Ossi.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ossi''' éte 'nu comune [[Italie|tagliáne]] de 5.775 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
