--- a/Ozieri.mw
+++ b/Ozieri.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ozieri''' éte 'nu comune [[Italie|tagliáne]] de 11.257 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
