--- a/Padria.mw
+++ b/Padria.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Padria''' éte 'nu comune [[Italie|tagliáne]] de 836 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
