--- a/Pattada.mw
+++ b/Pattada.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pattada''' éte 'nu comune [[Italie|tagliáne]] de 3.513 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
