--- a/Perfugas.mw
+++ b/Perfugas.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Perfugas''' éte 'nu comune [[Italie|tagliáne]] de 2.488 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
