--- a/Porto_Torres.mw
+++ b/Porto_Torres.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Porto Torres''' éte 'nu comune [[Italie|tagliáne]] de 21.947 (Istat luglio 2006) crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
