--- a/Pozzomaggiore.mw
+++ b/Pozzomaggiore.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pozzomaggiore''' éte 'nu comune [[Italie|tagliáne]] de 3.011 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
