--- a/Putifigari.mw
+++ b/Putifigari.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Putifigari''' éte 'nu comune [[Italie|tagliáne]] de 736 (ISTAT 2006) crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
