--- a/Romana.mw
+++ b/Romana.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Romana''' éte 'nu comune [[Italie|tagliáne]] de 619 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
