--- a/Santa_Maria_Coghinas.mw
+++ b/Santa_Maria_Coghinas.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Santa Maria Coghinas''' éte 'nu comune [[Italie|tagliáne]] de 1.439 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
