--- a/Sedini.mw
+++ b/Sedini.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sedini''' éte 'nu comune [[Italie|tagliáne]] de 1.461 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
