--- a/Semestene.mw
+++ b/Semestene.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Semestene''' éte 'nu comune [[Italie|tagliáne]] de 227 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
