--- a/Sennori.mw
+++ b/Sennori.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sennori''' éte 'nu comune [[Italie|tagliáne]] de 7.298 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
