--- a/Siligo.mw
+++ b/Siligo.mw
@@ -32,7 +32,10 @@
 }}
 
 '''Siligo''' éte 'nu comune [[Italie|tagliáne]] d'a provinge de Sassari de 963 crestiáne.
-[[Category:Gëografije]] [[Category:Comune d'a Sardegna]] [[Category:Comune d'a provinge de Sassari]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
 
 [[an:Siligo]]
 [[co:Siligo]]
