--- a/Sorso.mw
+++ b/Sorso.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sorso''' éte 'nu comune [[Italie|tagliáne]] de 14.419 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
