--- a/Stintino.mw
+++ b/Stintino.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Stintino''' éte 'nu comune [[Italie|tagliáne]] de 1.521 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
