--- a/Thiesi.mw
+++ b/Thiesi.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Thiesi''' éte 'nu comune [[Italie|tagliáne]] de 3.165 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
