--- a/Tula_(SS).mw
+++ b/Tula_(SS).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Tula (SS)''' éte 'nu comune [[Italie|tagliáne]] de 1.665 crestiáne.
-[[Category:Gëografije]]
+'''Tula''' éte 'nu comune [[Italie|tagliáne]] de 1.665 crestiáne.
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Sassari]]
+{{Provinge de Sassari}}
