--- a/Oristano.mw
+++ b/Oristano.mw
@@ -33,6 +33,8 @@
 '''Oristano''' éte 'nu comune [[Italie|tagliáne]] de 32.781 crestiáne.
 
 [[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
 
 [[an:Oristán]]
 [[ar:أوريستانو]]
