--- a/Abbasanta.mw
+++ b/Abbasanta.mw
@@ -1,6 +1,10 @@
 {{S}}
 Abbasanta éte 'nu comune tagliáne de 2.888  crestiáne.
 
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
+
 [[an:Abbasanta]]
 [[ca:Abbasanta]]
 [[de:Abbasanta]]
