--- a/Ales.mw
+++ b/Ales.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ales''' éte 'nu comune [[Italie|tagliáne]] de 1700 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
