--- a/Allai.mw
+++ b/Allai.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Allai''' éte 'nu comune [[Italie|tagliáne]] de 413 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
