--- a/Ardauli.mw
+++ b/Ardauli.mw
@@ -32,6 +32,8 @@
 '''Ardauli''' éte 'nu comune [[Italie|tagliáne]] de 1.158 crestiáne.
 
 [[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
 
 [[an:Ardaule]]
 [[ca:Ardauli]]
