--- a/Asuni.mw
+++ b/Asuni.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Asuni''' éte 'nu comune [[Italie|tagliáne]] de 425 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
