--- a/Baradili.mw
+++ b/Baradili.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Baradili''' éte 'nu comune [[Italie|tagliáne]] de 95 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
