--- a/Baratili_San_Pietro.mw
+++ b/Baratili_San_Pietro.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Baratili San Pietro''' éte 'nu comune [[Italie|tagliáne]] de 1.251 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
