--- a/Bidonì.mw
+++ b/Bidonì.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Bidonì''' éte 'nu comune [[Italie|tagliáne]] de 159 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
