--- a/Bonarcado.mw
+++ b/Bonarcado.mw
@@ -2,7 +2,9 @@
 
 '''Bonarcado''' éte 'nu comune [[Italie|tagliáne]] de 1.702 crestiáne.
 
-[[Category:Gëografije]]
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
 
 [[an:Bonàrcado]]
 [[ca:Bonarcado]]
