--- a/Bosa.mw
+++ b/Bosa.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Bosa''' éte 'nu comune [[Italie|tagliáne]] de 7.972 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
