--- a/Busachi.mw
+++ b/Busachi.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Busachi''' éte 'nu comune [[Italie|tagliáne]] de 1.629 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
