--- a/Cabras.mw
+++ b/Cabras.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cabras''' éte 'nu comune [[Italie|tagliáne]] de 8.889 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
