--- a/Curcuris.mw
+++ b/Curcuris.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Curcuris''' éte 'nu comune [[Italie|tagliáne]] de 317 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
