--- a/Ghilarza.mw
+++ b/Ghilarza.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Ghilarza''' éte 'nu comune [[Italie|tagliáne]] de 4.572 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
 
 [[an:Bilartzi]]
 [[ca:Ghilarza]]
