--- a/Laconi.mw
+++ b/Laconi.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Laconi''' éte 'nu comune [[Italie|tagliáne]] de 2.302 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
