--- a/Marrubiu.mw
+++ b/Marrubiu.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Marrubiu''' éte 'nu comune [[Italie|tagliáne]] de 5.034 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
 
 [[an:Marrùbiu]]
 [[ca:Marrubiu]]
