--- a/Masullas.mw
+++ b/Masullas.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Masullas''' éte 'nu comune [[Italie|tagliáne]] de 1.196 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
 
 [[an:Masuddas]]
 [[ca:Masullas]]
