--- a/Modolo.mw
+++ b/Modolo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Modolo''' éte 'nu comune [[Italie|tagliáne]] de 181 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
