--- a/Mogoro.mw
+++ b/Mogoro.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Mogoro''' éte 'nu comune [[Italie|tagliáne]] de 4.779 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
