--- a/Montresta.mw
+++ b/Montresta.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Montresta''' éte 'nu comune [[Italie|tagliáne]] de 650 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
