*Empty MediaWiki Message*

--- a/Ippazio_Stefàno.mw
+++ b/Ippazio_Stefàno.mw
@@ -1,4 +1,21 @@
-'''Ippazio Stefàno''' ca u chiaman ''Ezio'' ([[Casarano]], 25 agosto 1945) ète nu politiche tarandine; da 'u 14 giugno 2007 ète u sinnache de [[Tarde]].
+{{Bio
+|Nome = Ippazio
+|Cognome = Stefàno
+|PostCognome = 'u chiamane Ezio
+|Sesso = M
+|LuogoNascita = Casarano
+|GiornoMeseNascita = 25 agoste
+|AnnoNascita = 1945
+|LuogoMorte = 
+|GiornoMeseMorte = 
+|AnnoMorte = 
+|Attività = politico
+|Epoca = 1900
+|Nazionalità = tagliàne
+|PostNazionalità = 
+}}
+
+Da 'u [[14 sciugne]] [[2007]] ète ìu sinnache de Tarde.
 
 Ete lauriate 'n medicine e chirurghjie all'Università de [[Bari]] jndr'à [[1970]], ha sembre fatjate a [[Tarde]] apprime cumme a urologhe da 'u 1971 a 'u 1972 eppò cumme pediatre da 'u 1972 a 'u 1992.
 Ha stat autore de nu sacc de mission umanitarie in [[Africa]] (jndr'à u 1974 quanne aver fnit u viagge in [[Benin]], ha avut nu premie da l'associazione [[Midece senza frondiere]]), da 'u 1988 ète bbuen pe fà u primarije.
