*Empty MediaWiki Message*

--- a/Ippazio_Stefàno.mw
+++ b/Ippazio_Stefàno.mw
@@ -13,6 +13,9 @@
 |Epoca = 1900
 |Nazionalità = tagliàne
 |PostNazionalità = 
+|Immagine = stefano.jpg
+|Didascalia='U sinnache Stefàno
+|DimImmagine = 300
 }}
 
 Da 'u [[14 sciugne]] [[2007]] ète ìu sinnache de Tarde.
