--- a/Neoneli.mw
+++ b/Neoneli.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Neoneli''' éte 'nu comune [[Italie|tagliáne]] de 791 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
