--- a/Norbello.mw
+++ b/Norbello.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Norbello''' éte 'nu comune [[Italie|tagliáne]] de 1.223 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
