--- a/Nurachi.mw
+++ b/Nurachi.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Nurachi''' éte 'nu comune [[Italie|tagliáne]] de 1.619 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
