--- a/Nureci.mw
+++ b/Nureci.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Nureci''' éte 'nu comune [[Italie|tagliáne]] de 393 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
