--- a/Palmas_Arborea.mw
+++ b/Palmas_Arborea.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Palmas Arborea''' éte 'nu comune [[Italie|tagliáne]] de 1.335 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
