--- a/Paulilatino.mw
+++ b/Paulilatino.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Paulilatino''' éte 'nu comune [[Italie|tagliáne]] de 2.517 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
