--- a/Pompu.mw
+++ b/Pompu.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pompu''' éte 'nu comune [[Italie|tagliáne]] de 303 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
