--- a/Riola_Sardo.mw
+++ b/Riola_Sardo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Riola Sardo''' éte 'nu comune [[Italie|tagliáne]] de 2.137 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
