--- a/Ruinas.mw
+++ b/Ruinas.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ruinas''' éte 'nu comune [[Italie|tagliáne]] de 825 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
