--- a/Sagama.mw
+++ b/Sagama.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sagama''' éte 'nu comune [[Italie|tagliáne]] de 204  crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
