--- a/Samugheo.mw
+++ b/Samugheo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Samugheo''' éte 'nu comune [[Italie|tagliáne]] de 3.509 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Oristano]]
+{{Provinge de Oristano}}
