tolti tutti i portali

--- a/Pagene_Prengepále.mw
+++ b/Pagene_Prengepále.mw
@@ -26,7 +26,7 @@ Se non conosci il Tarantino leggi le [[Wikipedia:Vocabolario di tarantino|conven
 <!---------------------------------------------------------------->
 | width=1%| [[Image:Cozza.png|50px|Arte, letterature, lènghe, mùseche]]
 | width=48% style="border-bottom: 1px dashed #AAAAAA;" | '''[[:Category:Arte|Arte]]''', '''[[:Category:Letterature|letterature]]''', '''[[:Category:Linguìsteche|lènghe]]''', '''[[:Category:Mùseche|mùseche]]'''<br/> 
-[[:Category:Architetture|Architetture]] &middot; ''[[Portale:Arte|Arte]]'' &middot; [[:Category:Cìneme|Cìneme]] &middot; [[:Category:Danze|Danze]] &middot; [[:Category:Design|Design]] &middot; [[:Category:Futografije|Futografije]] &middot; [[:Category:Fumiette|Fumètte]] &middot; [[:Category:Letterature|Letterature]] &middot; [[:Category:Linguìsteche|Linguìsteche]] &middot; [[:Category:Mùseche|Mùseche]]  &middot; [[:Category:Petture|Petture]] &middot; [[:Category:Sculture|Sculture]] &middot; [[:Category:Tiatre|Tiatre]] 
+[[:Category:Architetture|Architetture]] &middot; [[:Category:Arte|Arte]] &middot; [[:Category:Cìneme|Cìneme]] &middot; [[:Category:Danze|Danze]] &middot; [[:Category:Design|Design]] &middot; [[:Category:Futografije|Futografije]] &middot; [[:Category:Fumiette|Fumètte]] &middot; [[:Category:Letterature|Letterature]] &middot; [[:Category:Linguìsteche|Linguìsteche]] &middot; [[:Category:Mùseche|Mùseche]]  &middot; [[:Category:Petture|Petture]] &middot; [[:Category:Sculture|Sculture]] &middot; [[:Category:Tiatre|Tiatre]] 
 |-
 | [[Image:Cozza.png|50px|Scienze sciuggiále, storie, sciugrafije, releggione]]
 | style="border-bottom: 1px dashed #AAAAAA;" | '''[[:Category:Scienze sciuggiále|Scienze sciuggiále]]''', '''[[:Category:Storie|storie]]''', '''[[:Category:Sciugrafije|sciugrafije]]''', '''[[:Category:Releggione|releggione]]'''<br/>
