--- a/Nome_tarandine.mw
+++ b/Nome_tarandine.mw
@@ -6,6 +6,7 @@ Queste jè 'na liste de [[Antroponime|nome proprie de crestiàne]] comune a [[Ta
 'Mbrà le parendese quadre se legge 'u nome seconne a diziona [[IPA]].
 
 == Nome de maschele ==
+
 === A ===
 *Andònie {{IPA|[Andòniə]}} - Antonio
 *Andò {{IPA|[Andò]}} - Antonio
@@ -30,6 +31,9 @@ Queste jè 'na liste de [[Antroponime|nome proprie de crestiàne]] comune a [[Ta
 *Cataldíne {{IPA|[Cataldínə]}} - Cataldino
 *Cataverùdde {{IPA|[Catavərùddə]}} - Cataldino
 *Catàvete {{IPA|[Catàvətə]}} - Cataldo
+*Ceccìlle {{IPA|[Cəccìllə]}} - Ciccillo (vezzeggiativo di Francesco)
+*Cellùzze {{IPA|[Cəllùzzə]}} - dim. di Francesco
+*Cìcce {{IPA|[Cìccə]}} - Ciccio (dim. di Francesco)
 *Cusemíne {{IPA|[Cusəmínə]}} - Cosimino
 
 === D ===
@@ -39,6 +43,11 @@ Queste jè 'na liste de [[Antroponime|nome proprie de crestiàne]] comune a [[Ta
 === E ===
 *Errìche {{IPA|[Errìchə]}} - Enrico
 *Ernèste {{IPA|[Ernèstə]}} - Ernesto
+
+=== F ===
+*Felìppe  {{IPA|[Fəlìppə]}} - Filippo
+*Frangì {{IPA|[Franghì]}} - Francè (apocopata di Francesco)
+*Frangìsche {{IPA|[Franghìschə]}} - Francesco
 
 === G ===
 *Gesèppe - Giuseppe
@@ -55,6 +64,7 @@ Queste jè 'na liste de [[Antroponime|nome proprie de crestiàne]] comune a [[Ta
 *Taddíne {{IPA|[Taddínə]}} - Cataldino
 
 == Nome de femmene ==
+
 === A ===
 *Adéle {{IPA|[Adélə]}} - Adele / Adelaide
 *Agata {{IPA|[Agata]}} - Agata
@@ -63,6 +73,7 @@ Queste jè 'na liste de [[Antroponime|nome proprie de crestiàne]] comune a [[Ta
 *Alessàndre {{IPA|[Alessàndrə]}} - Alessandra
 *Amèlie {{IPA|[Amèliə]}} - Amelia
 *Andunètte {{IPA|[Andunettə]}} - Antonietta
+*Angècche {{IPA|[Angècchə]}} - dim. di Francesca
 *Angiulína {{IPA|[Angiulína]}} - Angelina
 *Anne {{IPA|[Annə]}} - Anna
 *Anníne {{IPA|[Annínə]}} - Annina
@@ -81,6 +92,7 @@ Queste jè 'na liste de [[Antroponime|nome proprie de crestiàne]] comune a [[Ta
 *Carméline {{IPA|[Carmélinə]}} - Carmelina
 *Cataríne {{IPA|[Catarínə]}} - Caterina
 *Cecílie {{IPA|[Cecíliə]}} - Cecilia
+*Checchíne {{IPA|[Checchínə]}} - Franceschina
 *Chiáre {{IPA|[Chiárə]}} - Chiara
 *Chiaríne {{IPA|[Chiarínə]}} - Chiarina / Chiaretta
 *Comàsie {{IPA|[Comàsiə]}} - Comasia
@@ -98,6 +110,8 @@ Queste jè 'na liste de [[Antroponime|nome proprie de crestiàne]] comune a [[Ta
 *Eufràsie {{IPA|[Eufràsiə]}} - Eufrasia
 
 === F ===
+*Felumène {{IPA|[Fəlumènə]}} - Filomena
+*Frangèsche {{IPA|[Franghèschə]}} - Francesca
 *Fumíje {{IPA|[Fumíjə]}} - Eufemia
 
 === J ===
@@ -109,6 +123,7 @@ Lesabbètte {{IPA|Ləsabbèttə}} - Elisabetta
 === M ===
 *Marije - Maria
 *Melíne {{IPA|[Melínə]}} - Carmelina
+*Menúcce {{IPA|[Mənúccə]}} - Minuccia (dim. di Filomena)
 *Mìlia {{IPA|[Mìlia]}} - Emilia (diminutivo)
 
 === N ===
