*Empty MediaWiki Message*

--- a/Gairo.mw
+++ b/Gairo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Gairo''' éte 'nu comune [[Italie|tagliáne]] de 1.678 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de l'Ogliastra]]
+{{Provinge de l'Ogliastra}}
