*Empty MediaWiki Message*

--- a/Girasole_(OG).mw
+++ b/Girasole_(OG).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Girasole (OG)''' éte 'nu comune [[Italie|tagliáne]] de 946 crestiáne.
-[[Category:Gëografije]]
+'''Girasole''' éte 'nu comune [[Italie|tagliáne]] de 946 crestiáne.
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de l'Ogliastra]]
+{{Provinge de l'Ogliastra}}
