*Empty MediaWiki Message*

--- a/Ilbono.mw
+++ b/Ilbono.mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Ilbono''' éte 'nu comune [[Italie|tagliáne]] de 2.293 crestiáne.
-[[Category:Gëografije]]
+'''Ilbono''' éte 'nu comune [[Itaglie|tagliáne]] de 2.293 crestiáne.
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de l'Ogliastra]]
+{{Provinge de l'Ogliastra}}
