*Empty MediaWiki Message*

--- a/Jerzu.mw
+++ b/Jerzu.mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Jerzu''' éte 'nu comune [[Italie|tagliáne]] de 3.352 crestiáne.
-[[Category:Gëografije]]
+'''Jerzu''' éte 'nu comune [[Itaglie|tagliáne]] de 3.352 crestiáne.
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de l'Ogliastra]]
+{{Provinge de l'Ogliastra}}
