*Empty MediaWiki Message*

--- a/Masainas.mw
+++ b/Masainas.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Masainas''' éte 'nu comune [[Italie|tagliáne]] de 1.479 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Carbonia-Iglesias]]
+{{Provinge de Carbonia-Iglesias}}
 
 [[an:Masainas]]
 [[ca:Masainas]]
