*Empty MediaWiki Message*

--- a/Sant'Antioco.mw
+++ b/Sant'Antioco.mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Sant'Antioco''' éte 'nu comune [[Italie|tagliáne]] de 11.730 crestiáne.
-[[Category:Gëografije]]
+'''Sant'Antioco''' éte 'nu comune [[Itaglie|tagliáne]] de 11.730 crestiáne.
+
+[[Category:Comune d'a Sardegna]]
+[[Category:Comune d'a provinge de Carbonia-Iglesias]]
+{{Provinge de Carbonia-Iglesias}}
