*Empty MediaWiki Message*

--- a/Gorizia.mw
+++ b/Gorizia.mw
@@ -34,6 +34,8 @@
 '''Gorizia''' éte 'nu comune [[Italie|tagliáne]] de 36.172 crestiáne.
 
 [[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Gorizia]]
+{{Provinge de Gorizia}}
 
 [[ar:غوريتسيا]]
 [[br:Gorizia]]
