*Empty MediaWiki Message*

--- a/Gradisca_d'Isonzo.mw
+++ b/Gradisca_d'Isonzo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Gradisca d'Isonzo''' éte 'nu comune [[Italie|tagliáne]] de 6.700 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Gorizia]]
+{{Provinge de Gorizia}}
