*Empty MediaWiki Message*

--- a/Mariano_del_Friuli.mw
+++ b/Mariano_del_Friuli.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Mariano del Friuli''' éte 'nu comune [[Italie|tagliáne]] de 1.560 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Gorizia]]
+{{Provinge de Gorizia}}
 
 [[bg:Мариано дел Фриули]]
 [[ca:Mariano del Friuli]]
