*Empty MediaWiki Message*

--- a/Monfalcone.mw
+++ b/Monfalcone.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Monfalcone''' éte 'nu comune [[Italie|tagliáne]] de 27.701 crestiáne.
 
+== Cristiane famose ==
+[[Elisa]] - candande
+
 [[Category:Comune d'u Friuli Venezia Giulia]]
 [[Category:Comune d'a provinge de Gorizia]]
 {{Provinge de Gorizia}}
