*Empty MediaWiki Message*

--- a/Pordenone.mw
+++ b/Pordenone.mw
@@ -34,6 +34,8 @@
 '''Pordenone''' éte 'nu comune [[Italie|tagliáne]] de 51.011 crestiáne.
 
 [[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
 
 [[ar:بوردينوني]]
 [[ca:Pordenone]]
