*Empty MediaWiki Message*

--- a/Andreis.mw
+++ b/Andreis.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Andreis''' éte 'nu comune [[Italie|tagliáne]] de 298 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
