*Empty MediaWiki Message*

--- a/Cordovado.mw
+++ b/Cordovado.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cordovado''' éte 'nu comune [[Italie|tagliáne]] de 2.659 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
