*Empty MediaWiki Message*

--- a/Meduno.mw
+++ b/Meduno.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Meduno''' éte 'nu comune [[Italie|tagliáne]] de 1.728 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
 
 [[ca:Meduno]]
 [[de:Meduno]]
