Bot: Aggiungo: en, eo, fr, it, ja, nap, nl, pl, pt, uk, vi, vo

--- a/Marmentino.mw
+++ b/Marmentino.mw
@@ -1,3 +1,16 @@
 {{S}}
 '''Marmentino''' éte 'nu comune [[Italie|tagliáne]] de 711 crestiáne.
 [[Category:Gëografije]]
+
+[[en:Marmentino]]
+[[eo:Marmentino]]
+[[fr:Marmentino]]
+[[it:Marmentino]]
+[[ja:マルメンティーノ]]
+[[nap:Marmentino]]
+[[nl:Marmentino]]
+[[pl:Marmentino]]
+[[pt:Marmentino]]
+[[uk:Марментіно]]
+[[vi:Marmentino]]
+[[vo:Marmentino]]
