Bot: Aggiungo: ar, en, eo, fr, id, it, ja, ms, nap, nl, pl, pt, ru, uk, vec, vi, vo

--- a/Marmirolo.mw
+++ b/Marmirolo.mw
@@ -1,3 +1,21 @@
 {{S}}
 '''Marmirolo''' éte 'nu comune [[Italie|tagliáne]] de 7.380 crestiáne.
 [[Category:Gëografije]]
+
+[[ar:مارميرولو]]
+[[en:Marmirolo]]
+[[eo:Marmirolo]]
+[[fr:Marmirolo]]
+[[id:Marmirolo]]
+[[it:Marmirolo]]
+[[ja:マルミローロ]]
+[[ms:Marmirolo]]
+[[nap:Marmirolo]]
+[[nl:Marmirolo]]
+[[pl:Marmirolo]]
+[[pt:Marmirolo]]
+[[ru:Мармироло]]
+[[uk:Марміроло]]
+[[vec:Marmiroło]]
+[[vi:Marmirolo]]
+[[vo:Marmirolo]]
