Bot: Aggiungo: en, eo, fr, hu, it, ja, nap, nl, pl, pt, ru, scn, uk, vec, vi, vo

--- a/Maropati.mw
+++ b/Maropati.mw
@@ -4,3 +4,20 @@
 [[Category:Comune d'a Calavrie]]
 [[Category:Comune d'a provinge de Reggio Calavrie]]
 {{Provinge de Reggio Calavrie}}
+
+[[en:Maropati]]
+[[eo:Maropati]]
+[[fr:Maropati]]
+[[hu:Maropati]]
+[[it:Maropati]]
+[[ja:マローパティ]]
+[[nap:Maropati]]
+[[nl:Maropati]]
+[[pl:Maropati]]
+[[pt:Maropati]]
+[[ru:Маропати]]
+[[scn:Marupati (RC)]]
+[[uk:Маропаті]]
+[[vec:Maropati]]
+[[vi:Maropati]]
+[[vo:Maropati]]
