Bot: Aggiungo: br, co, de, en, eo, fr, it, ja, la, nap, nl, pl, pms, pt, uk, vec, vi, vo

--- a/Marradi.mw
+++ b/Marradi.mw
@@ -1,3 +1,22 @@
 {{S}}
 '''Marradi''' éte 'nu comune [[Italie|tagliáne]] de 3.616 crestiáne.
 [[Category:Gëografije]]
+
+[[br:Marradi]]
+[[co:Marradi]]
+[[de:Marradi]]
+[[en:Marradi]]
+[[eo:Marradi]]
+[[fr:Marradi]]
+[[it:Marradi]]
+[[ja:マッラーディ]]
+[[la:Castellum de Marato]]
+[[nap:Marradi]]
+[[nl:Marradi]]
+[[pl:Marradi]]
+[[pms:Marradi]]
+[[pt:Marradi]]
+[[uk:Марраді]]
+[[vec:Maradi]]
+[[vi:Marradi]]
+[[vo:Marradi]]
