Bot: Aggiungo: de, en, eo, fr, id, it, ja, lmo, nap, nl, pl, pms, pt, uk, vi, vo

--- a/Marsaglia.mw
+++ b/Marsaglia.mw
@@ -1,3 +1,20 @@
 {{S}}
 '''Marsaglia''' éte 'nu comune [[Italie|tagliáne]] de 316 crestiáne.
 [[Category:Gëografije]]
+
+[[de:Marsaglia]]
+[[en:Marsaglia]]
+[[eo:Marsaglia]]
+[[fr:Marsaglia]]
+[[id:Marsaglia]]
+[[it:Marsaglia]]
+[[ja:マルサリーア]]
+[[lmo:Marsaja]]
+[[nap:Marsaglia]]
+[[nl:Marsaglia]]
+[[pl:Marsaglia]]
+[[pms:Marsaja]]
+[[pt:Marsaglia]]
+[[uk:Марсалья]]
+[[vi:Marsaglia]]
+[[vo:Marsaglia]]
