Bot: Aggiungo: de, en, eo, fr, hu, it, ja, nap, nl, pl, pt, scn, uk, vo

--- a/Martano.mw
+++ b/Martano.mw
@@ -34,3 +34,18 @@
 [[Category:Comune d'a Pugghie]]
 [[Category:Comune d'a provinge de Lecce]]
 {{Provinge de Lecce}}
+
+[[de:Martano]]
+[[en:Martano]]
+[[eo:Martano]]
+[[fr:Martano]]
+[[hu:Martano]]
+[[it:Martano]]
+[[ja:マルターノ]]
+[[nap:Martano]]
+[[nl:Martano]]
+[[pl:Martano]]
+[[pt:Martano]]
+[[scn:Martanu (LE)]]
+[[uk:Мартано]]
+[[vo:Martano]]
