Bot: Aggiungo: de, en, eo, fr, hu, it, ja, nap, nl, pl, pt, scn, uk, vo

--- a/Martignano.mw
+++ b/Martignano.mw
@@ -4,3 +4,18 @@
 [[Category:Comune d'a Pugghie]]
 [[Category:Comune d'a provinge de Lecce]]
 {{Provinge de Lecce}}
+
+[[de:Martignano]]
+[[en:Martignano]]
+[[eo:Martignano]]
+[[fr:Martignano]]
+[[hu:Martignano]]
+[[it:Martignano]]
+[[ja:マルティニャーノ (レッチェ県)]]
+[[nap:Martignano]]
+[[nl:Martignano]]
+[[pl:Martignano]]
+[[pt:Martignano]]
+[[scn:Martignanu (LE)]]
+[[uk:Мартіньяно]]
+[[vo:Martignano]]
