Bot: Aggiungo: ca, de, en, eo, fr, id, it, ja, lmo, nap, nl, pl, pms, pt, uk, vi, vo

--- a/Martiniana_Po.mw
+++ b/Martiniana_Po.mw
@@ -1,3 +1,21 @@
 {{S}}
 '''Martiniana Po''' éte 'nu comune [[Italie|tagliáne]] de 666 crestiáne.
 [[Category:Gëografije]]
+
+[[ca:Martiniana Po]]
+[[de:Martiniana Po]]
+[[en:Martiniana Po]]
+[[eo:Martiniana Po]]
+[[fr:Martiniana Po]]
+[[id:Martiniana Po]]
+[[it:Martiniana Po]]
+[[ja:マルティニアーナ・ポー]]
+[[lmo:Martiniana]]
+[[nap:Martiniana Po]]
+[[nl:Martiniana Po]]
+[[pl:Martiniana Po]]
+[[pms:Martinian-a]]
+[[pt:Martiniana Po]]
+[[uk:Мартініана-По]]
+[[vi:Martiniana Po]]
+[[vo:Martiniana Po]]
