Bot: Aggiungo: de, en, eo, fr, it, ja, lmo, nap, nl, pl, pt, ru, uk, vi, vo

--- a/Martinengo.mw
+++ b/Martinengo.mw
@@ -1,3 +1,19 @@
 {{S}}
 '''Martinengo''' éte 'nu comune [[Italie|tagliáne]] de 9.426 crestiáne.
 [[Category:Gëografije]]
+
+[[de:Martinengo]]
+[[en:Martinengo]]
+[[eo:Martinengo]]
+[[fr:Martinengo]]
+[[it:Martinengo]]
+[[ja:マルティネンゴ]]
+[[lmo:Martinènch]]
+[[nap:Martinengo]]
+[[nl:Martinengo]]
+[[pl:Martinengo]]
+[[pt:Martinengo]]
+[[ru:Мартиненго]]
+[[uk:Мартіненго]]
+[[vi:Martinengo]]
+[[vo:Martinengo]]
