Bot: Aggiungo: en, eo, fr, hu, it, ja, mk, nap, nl, pl, pt, ru, uk, vi, vo

--- a/Marzano_Appio.mw
+++ b/Marzano_Appio.mw
@@ -4,3 +4,19 @@
 [[Category:Comune d'a Campania]]
 [[Category:Comune d'a provinge de Caserta]]
 {{Provinge de Caserta}}
+
+[[en:Marzano Appio]]
+[[eo:Marzano Appio]]
+[[fr:Marzano Appio]]
+[[hu:Marzano Appio]]
+[[it:Marzano Appio]]
+[[ja:マルツァーノ・アッピオ]]
+[[mk:Марцано Апио]]
+[[nap:Marzano Appio]]
+[[nl:Marzano Appio]]
+[[pl:Marzano Appio]]
+[[pt:Marzano Appio]]
+[[ru:Марцано-Аппьо]]
+[[uk:Марцано-Аппіо]]
+[[vi:Marzano Appio]]
+[[vo:Marzano Appio]]
