*Empty MediaWiki Message*

--- a/San_Martino_al_Tagliamento.mw
+++ b/San_Martino_al_Tagliamento.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Martino al Tagliamento''' éte 'nu comune [[Italie|tagliáne]] de 1.335 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Friuli Venezia Giulia]]
+[[Category:Comune d'a provinge de Pordenone]]
+{{Provinge de Pordenone}}
