Bot: Aggiungo: en, eo, fr, hu, it, ja, nap, nl, pl, pt, ru, scn, uk, vo

--- a/Marzi.mw
+++ b/Marzi.mw
@@ -4,3 +4,18 @@
 [[Category:Comune d'a Calavrie]]
 [[Category:Comune d'a provinge de Cosenza]]
 {{Provinge de Cosenza}}
+
+[[en:Marzi]]
+[[eo:Marzi]]
+[[fr:Marzi]]
+[[hu:Marzi]]
+[[it:Marzi]]
+[[ja:マルツィ]]
+[[nap:Marzi]]
+[[nl:Marzi]]
+[[pl:Marzi]]
+[[pt:Marzi]]
+[[ru:Марци]]
+[[scn:Marzi (CS)]]
+[[uk:Марці]]
+[[vo:Marzi]]
