Bot: Aggiungo: en, eo, es, fr, hu, it, ja, mk, nap, nl, pl, pt, ru, uk, vo

--- a/Marzano_de_Nola.mw
+++ b/Marzano_de_Nola.mw
@@ -4,3 +4,19 @@
 [[Category:Comune d'a Campania]]
 [[Category:Comune d'a provinge de Avellino]]
 {{Provinge de Avellino}}
+
+[[en:Marzano di Nola]]
+[[eo:Marzano di Nola]]
+[[es:Marzano di Nola]]
+[[fr:Marzano di Nola]]
+[[hu:Marzano di Nola]]
+[[it:Marzano di Nola]]
+[[ja:マルツァーノ・ディ・ノーラ]]
+[[mk:Марцано ди Нола]]
+[[nap:Marzano di Nola]]
+[[nl:Marzano di Nola]]
+[[pl:Marzano di Nola]]
+[[pt:Marzano di Nola]]
+[[ru:Марцано-ди-Нола]]
+[[uk:Марцано-ді-Нола]]
+[[vo:Marzano di Nola]]
