Bot: Aggiungo: de, en, eo, fr, it, ja, nap, nl, pl, pt, ru, uk, vi, vo

--- a/Masate.mw
+++ b/Masate.mw
@@ -1,3 +1,18 @@
 {{S}}
 '''Masate''' éte 'nu comune [[Italie|tagliáne]] de 2.458 crestiáne.
 [[Category:Gëografije]]
+
+[[de:Masate]]
+[[en:Masate]]
+[[eo:Masate]]
+[[fr:Masate]]
+[[it:Masate]]
+[[ja:マザーテ]]
+[[nap:Masate]]
+[[nl:Masate]]
+[[pl:Masate]]
+[[pt:Masate]]
+[[ru:Мазате]]
+[[uk:Мазате]]
+[[vi:Masate]]
+[[vo:Masate]]
