Bot: Aggiungo: ca, de, en, eo, fr, it, ja, lmo, nap, nl, pl, pt, ru, scn, uk, vi, vo

--- a/Mascalucia.mw
+++ b/Mascalucia.mw
@@ -4,3 +4,21 @@
 [[Category:Comune d'a Sicilia]]
 [[Category:Comune d'a provinge de Catania]]
 {{Provinge de Catania}}
+
+[[ca:Mascalucia]]
+[[de:Mascalucia]]
+[[en:Mascalucia]]
+[[eo:Mascalucia]]
+[[fr:Mascalucia]]
+[[it:Mascalucia]]
+[[ja:マスカルチーア]]
+[[lmo:Mascalucia]]
+[[nap:Mascalucia]]
+[[nl:Mascalucia]]
+[[pl:Mascalucia]]
+[[pt:Mascalucia]]
+[[ru:Маскалуча]]
+[[scn:Mascalucìa (CT)]]
+[[uk:Маскалучія]]
+[[vi:Mascalucia]]
+[[vo:Mascalucia]]
