Bot: Aggiungo: ca, de, en, eo, es, fi, fr, it, ja, lmo, nap, nl, pl, pt, ru, scn, uk, vo

--- a/Mascali.mw
+++ b/Mascali.mw
@@ -4,3 +4,22 @@
 [[Category:Comune d'a Sicilia]]
 [[Category:Comune d'a provinge de Catania]]
 {{Provinge de Catania}}
+
+[[ca:Mascali]]
+[[de:Mascali]]
+[[en:Mascali]]
+[[eo:Mascali]]
+[[es:Mascali]]
+[[fi:Mascali]]
+[[fr:Mascali]]
+[[it:Mascali]]
+[[ja:マスカリ]]
+[[lmo:Mascali]]
+[[nap:Mascali]]
+[[nl:Mascali]]
+[[pl:Mascali]]
+[[pt:Mascali]]
+[[ru:Маскали]]
+[[scn:Màscali (CT)]]
+[[uk:Маскалі]]
+[[vo:Mascali]]
