Bot: Aggiungo: ca, eml, en, eo, fr, id, it, ja, nap, nl, pl, pms, pt, ru, uk, vec, vi, vo

--- a/Masi_Torello.mw
+++ b/Masi_Torello.mw
@@ -1,3 +1,22 @@
 {{S}}
 '''Masi Torello''' éte 'nu comune [[Italie|tagliáne]] de 2.328 crestiáne.
 [[Category:Gëografije]]
+
+[[ca:Masi Torello]]
+[[eml:I Mas]]
+[[en:Masi Torello]]
+[[eo:Masi Torello]]
+[[fr:Masi Torello]]
+[[id:Masi Torello]]
+[[it:Masi Torello]]
+[[ja:マージ・トレッロ]]
+[[nap:Masi Torello]]
+[[nl:Masi Torello]]
+[[pl:Masi Torello]]
+[[pms:Masi Torello]]
+[[pt:Masi Torello]]
+[[ru:Мази-Торелло]]
+[[uk:Мазі-Торелло]]
+[[vec:Masi Torello]]
+[[vi:Masi Torello]]
+[[vo:Masi Torello]]
