Bot: Aggiungo: de, en, eo, fr, id, it, ja, nap, nl, pl, pms, pt, uk, vi, vo

--- a/Masio.mw
+++ b/Masio.mw
@@ -1,3 +1,19 @@
 {{S}}
 '''Masio''' éte 'nu comune [[Italie|tagliáne]] de 1.481 crestiáne.
 [[Category:Gëografije]]
+
+[[de:Masio]]
+[[en:Masio]]
+[[eo:Masio]]
+[[fr:Masio]]
+[[id:Masio]]
+[[it:Masio]]
+[[ja:マージオ]]
+[[nap:Masio]]
+[[nl:Masio]]
+[[pl:Masio]]
+[[pms:Mas]]
+[[pt:Masio]]
+[[uk:Мазіо]]
+[[vi:Masio]]
+[[vo:Masio]]
