Bot: Aggiungo: de, en, eo, fr, it, ja, lij, nap, nl, pl, pms, pt, uk, vi, vo

--- a/Masone.mw
+++ b/Masone.mw
@@ -4,3 +4,19 @@
 [[Category:Comune d'a Liguria]]
 [[Category:Comune d'a provinge de Genova]]
 {{Provinge de Genova}}
+
+[[de:Masone]]
+[[en:Masone]]
+[[eo:Masone]]
+[[fr:Masone]]
+[[it:Masone]]
+[[ja:マゾーネ]]
+[[lij:Mason]]
+[[nap:Masone]]
+[[nl:Masone]]
+[[pl:Masone]]
+[[pms:Masone]]
+[[pt:Masone]]
+[[uk:Мазоне]]
+[[vi:Masone]]
+[[vo:Masone]]
