Bot: Aggiungo: de, en, eo, es, fr, it, ja, la, nap, nl, pl, pms, pt, uk, vo

--- a/Massa_Marittima.mw
+++ b/Massa_Marittima.mw
@@ -1,3 +1,19 @@
 {{S}}
 '''Massa Marittima''' éte 'nu comune [[Italie|tagliáne]] de 8.779 crestiáne.
 [[Category:Gëografije]]
+
+[[de:Massa Marittima]]
+[[en:Massa Marittima]]
+[[eo:Massa Marittima]]
+[[es:Massa Marittima]]
+[[fr:Massa Marittima]]
+[[it:Massa Marittima]]
+[[ja:マッサ・マリッティマ]]
+[[la:Massa Veternensis]]
+[[nap:Massa Marittima]]
+[[nl:Massa Marittima]]
+[[pl:Massa Marittima]]
+[[pms:Massa Marittima]]
+[[pt:Massa Marittima]]
+[[uk:Масса-Мариттіма]]
+[[vo:Massa Marittima]]
