Bot: Aggiungo: en, eo, fr, it, ja, nap, nl, pl, pms, pt, uk, vi, vo

--- a/Massa_Fermana.mw
+++ b/Massa_Fermana.mw
@@ -4,3 +4,17 @@
 [[Category:Comune de le Marche]]
 [[Category:Comune d'a provinge de Fermo]]
 {{Provinge de Fermo}}
+
+[[en:Massa Fermana]]
+[[eo:Massa Fermana]]
+[[fr:Massa Fermana]]
+[[it:Massa Fermana]]
+[[ja:マッサ・フェルマーナ]]
+[[nap:Massa Fermana]]
+[[nl:Massa Fermana]]
+[[pl:Massa Fermana]]
+[[pms:Massa Fermana]]
+[[pt:Massa Fermana]]
+[[uk:Масса-Фермана]]
+[[vi:Massa Fermana]]
+[[vo:Massa Fermana]]
