Bot: Aggiungo: de, eml, en, eo, fr, it, ja, nap, nl, pl, pms, pt, ru, uk, vec, vi, vo, zh

--- a/Massa_Lombarda.mw
+++ b/Massa_Lombarda.mw
@@ -1,3 +1,22 @@
 {{S}}
 '''Massa Lombarda''' éte 'nu comune [[Italie|tagliáne]] de 8.506 crestiáne.
 [[Category:Gëografije]]
+
+[[de:Massa Lombarda]]
+[[eml:La Màcia]]
+[[en:Massa Lombarda]]
+[[eo:Massa Lombarda]]
+[[fr:Massa Lombarda]]
+[[it:Massa Lombarda]]
+[[ja:マッサ・ロンバルダ]]
+[[nap:Massa Lombarda]]
+[[nl:Massa Lombarda]]
+[[pl:Massa Lombarda]]
+[[pms:Massa Lombarda]]
+[[pt:Massa Lombarda]]
+[[ru:Масса-Ломбарда]]
+[[uk:Масса-Ломбарда]]
+[[vec:Massa Lonbarda]]
+[[vi:Massa Lombarda]]
+[[vo:Massa Lombarda]]
+[[zh:马萨伦巴达]]
