Bot: Aggiungo: eml, en, eo, fr, id, it, ja, nap, nl, pl, pms, pt, ru, uk, vec, vi, vo

--- a/Massa_Fiscaglia.mw
+++ b/Massa_Fiscaglia.mw
@@ -1,3 +1,21 @@
 {{S}}
 '''Massa Fiscaglia''' éte 'nu comune [[Italie|tagliáne]] de 3.819 crestiáne.
 [[Category:Gëografije]]
+
+[[eml:La Màsa]]
+[[en:Massa Fiscaglia]]
+[[eo:Massa Fiscaglia]]
+[[fr:Massa Fiscaglia]]
+[[id:Massa Fiscaglia]]
+[[it:Massa Fiscaglia]]
+[[ja:マッサ・フィスカッリア]]
+[[nap:Massa Fiscaglia]]
+[[nl:Massa Fiscaglia]]
+[[pl:Massa Fiscaglia]]
+[[pms:Massa Fiscaglia]]
+[[pt:Massa Fiscaglia]]
+[[ru:Масса-Фискалья]]
+[[uk:Масса-Фіскалья]]
+[[vec:Massa Fiscaglia]]
+[[vi:Massa Fiscaglia]]
+[[vo:Massa Fiscaglia]]
