Bot: Aggiungo: de, en, eo, fr, hu, it, ja, nap, nl, pl, pms, pt, roa-rup, uk, vi, vo

--- a/Massa_d'Albe.mw
+++ b/Massa_d'Albe.mw
@@ -4,3 +4,20 @@
 [[Category:Comune de l'Abbruzze]]
 [[Category:Comune d'a provinge de L'Aquila]]
 {{Provinge de L'Aquila}}
+
+[[de:Massa d’Albe]]
+[[en:Massa d'Albe]]
+[[eo:Massa d'Albe]]
+[[fr:Massa d'Albe]]
+[[hu:Massa d’Albe]]
+[[it:Massa d'Albe]]
+[[ja:マッサ・ダルベ]]
+[[nap:Massa d'Albe]]
+[[nl:Massa d'Albe]]
+[[pl:Massa d'Albe]]
+[[pms:Massa d'Albe]]
+[[pt:Massa d'Albe]]
+[[roa-rup:Massa d'Albe]]
+[[uk:Масса-д'Альбе]]
+[[vi:Massa d'Albe]]
+[[vo:Massa d'Albe]]
