Bot: Aggiungo: en, eo, fr, id, it, ja, nap, nl, pl, pt, ru, uk, vi, vo

--- a/Massalengo.mw
+++ b/Massalengo.mw
@@ -1,3 +1,18 @@
 {{S}}
 '''Massalengo''' éte 'nu comune [[Italie|tagliáne]] de 3.199 crestiáne.
 [[Category:Gëografije]]
+
+[[en:Massalengo]]
+[[eo:Massalengo]]
+[[fr:Massalengo]]
+[[id:Massalengo]]
+[[it:Massalengo]]
+[[ja:マッサレンゴ]]
+[[nap:Massalengo]]
+[[nl:Massalengo]]
+[[pl:Massalengo]]
+[[pt:Massalengo]]
+[[ru:Массаленго]]
+[[uk:Массаленго]]
+[[vi:Massalengo]]
+[[vo:Massalengo]]
