Bot: Aggiungo: de, en, eo, fr, id, it, ja, nap, nl, pl, pms, pt, uk, vi, vo

--- a/Massazza.mw
+++ b/Massazza.mw
@@ -1,3 +1,19 @@
 {{S}}
 '''Massazza''' éte 'nu comune [[Italie|tagliáne]] de 579  crestiáne.
 [[Category:Gëografije]]
+
+[[de:Massazza]]
+[[en:Massazza]]
+[[eo:Massazza]]
+[[fr:Massazza]]
+[[id:Massazza]]
+[[it:Massazza]]
+[[ja:マッサッツァ]]
+[[nap:Massazza]]
+[[nl:Massazza]]
+[[pl:Massazza]]
+[[pms:Massasa]]
+[[pt:Massazza]]
+[[uk:Массацца]]
+[[vi:Massazza]]
+[[vo:Massazza]]
