Bot: Aggiungo: de, en, eo, fr, id, it, ja, nap, nl, pl, pms, pt, uk, vi, vo

--- a/Masserano.mw
+++ b/Masserano.mw
@@ -1,3 +1,19 @@
 {{S}}
 '''Masserano''' éte 'nu comune [[Italie|tagliáne]] de 2.313 crestiáne.
 [[Category:Gëografije]]
+
+[[de:Masserano]]
+[[en:Masserano]]
+[[eo:Masserano]]
+[[fr:Masserano]]
+[[id:Masserano]]
+[[it:Masserano]]
+[[ja:マッセラーノ]]
+[[nap:Masserano]]
+[[nl:Masserano]]
+[[pl:Masserano]]
+[[pms:Massran]]
+[[pt:Masserano]]
+[[uk:Массерано]]
+[[vi:Masserano]]
+[[vo:Masserano]]
