Bot: Aggiungo: en, eo, fr, it, ja, nap, nl, pl, pms, pt, uk, vi, vo

--- a/Massignano.mw
+++ b/Massignano.mw
@@ -4,3 +4,17 @@
 [[Category:Comune de le Marche]]
 [[Category:Comune d'a provinge de Ascoli Piceno]]
 {{Provinge de Ascoli Piceno}}
+
+[[en:Massignano]]
+[[eo:Massignano]]
+[[fr:Massignano]]
+[[it:Massignano]]
+[[ja:マッシニャーノ]]
+[[nap:Massignano]]
+[[nl:Massignano]]
+[[pl:Massignano]]
+[[pms:Massignano]]
+[[pt:Massignano]]
+[[uk:Массіньяно]]
+[[vi:Massignano]]
+[[vo:Massignano]]
