Bot: Aggiungo: en, eo, fr, it, ja, nap, nl, pl, pt, uk, vi, vo

--- a/Matelica.mw
+++ b/Matelica.mw
@@ -4,3 +4,16 @@
 [[Category:Comune de le Marche]]
 [[Category:Comune d'a provinge de Macerata]]
 {{Provinge de Macerata}}
+
+[[en:Matelica]]
+[[eo:Matelica]]
+[[fr:Matelica]]
+[[it:Matelica]]
+[[ja:マテーリカ]]
+[[nap:Matelica]]
+[[nl:Matelica]]
+[[pl:Matelica]]
+[[pt:Matelica]]
+[[uk:Мателіка]]
+[[vi:Matelica]]
+[[vo:Matelica]]
