Bot: Aggiungo: en, eo, fr, hu, it, ja, nap, nl, pl, pt, scn, uk

--- a/Matino.mw
+++ b/Matino.mw
@@ -4,3 +4,16 @@
 [[Category:Comune d'a Pugghie]]
 [[Category:Comune d'a provinge de Lecce]]
 {{Provinge de Lecce}}
+
+[[en:Matino]]
+[[eo:Matino]]
+[[fr:Matino]]
+[[hu:Matino]]
+[[it:Matino]]
+[[ja:マティーノ]]
+[[nap:Matino]]
+[[nl:Matino]]
+[[pl:Matino]]
+[[pt:Matino]]
+[[scn:Matinu (LE)]]
+[[uk:Матіно]]
