Bot: Aggiungo: de, en, eo, fr, id, it, ja, nap, nl, pl, pt, uk, vi, vo

--- a/Mazzo_di_Valtellina.mw
+++ b/Mazzo_di_Valtellina.mw
@@ -1,3 +1,18 @@
 {{S}}
 '''Mazzo di Valtellina''' éte 'nu comune [[Italie|tagliáne]] de 1.045 crestiáne.
 [[Category:Gëografije]]
+
+[[de:Mazzo di Valtellina]]
+[[en:Mazzo di Valtellina]]
+[[eo:Mazzo di Valtellina]]
+[[fr:Mazzo di Valtellina]]
+[[id:Mazzo di Valtellina]]
+[[it:Mazzo di Valtellina]]
+[[ja:マッツォ・ディ・ヴァルテッリーナ]]
+[[nap:Mazzo di Valtellina]]
+[[nl:Mazzo di Valtellina]]
+[[pl:Mazzo di Valtellina]]
+[[pt:Mazzo di Valtellina]]
+[[uk:Маццо-ді-Вальтелліна]]
+[[vi:Mazzo di Valtellina]]
+[[vo:Mazzo di Valtellina]]
