Bot: Aggiungo: de, en, eo, fr, it, ja, nap, nl, pl, pt, scn, uk, vi, vo

--- a/Mazzarrà_Sand'Andrea.mw
+++ b/Mazzarrà_Sand'Andrea.mw
@@ -4,3 +4,18 @@
 [[Category:Comune d'a Sicilia]]
 [[Category:Comune d'a provinge de Messina]]
 {{Provinge de Messina}}
+
+[[de:Mazzarrà Sant’Andrea]]
+[[en:Mazzarrà Sant'Andrea]]
+[[eo:Mazzarrà Sant'Andrea]]
+[[fr:Mazzarrà Sant'Andrea]]
+[[it:Mazzarrà Sant'Andrea]]
+[[ja:マッツァッラ・サンタンドレーア]]
+[[nap:Mazzarrà Sant'Andrea]]
+[[nl:Mazzarrà Sant'Andrea]]
+[[pl:Mazzarrà Sant'Andrea]]
+[[pt:Mazzarrà Sant'Andrea]]
+[[scn:Mazzarrà (ME)]]
+[[uk:Маццарра-Сант'Андреа]]
+[[vi:Mazzarrà Sant'Andrea]]
+[[vo:Mazzarrà Sant'Andrea]]
