Bot: Aggiungo: de, en, eo, fr, gl, it, ja, lmo, nap, nl, pl, pt, ru, scn, uk, vi, vo

--- a/Mazzarrone.mw
+++ b/Mazzarrone.mw
@@ -4,3 +4,21 @@
 [[Category:Comune d'a Sicilia]]
 [[Category:Comune d'a provinge de Catania]]
 {{Provinge de Catania}}
+
+[[de:Mazzarrone]]
+[[en:Mazzarrone]]
+[[eo:Mazzarrone]]
+[[fr:Mazzarrone]]
+[[gl:Mazzarrone]]
+[[it:Mazzarrone]]
+[[ja:マッツァッローネ]]
+[[lmo:Mazzarrone]]
+[[nap:Mazzarrone]]
+[[nl:Mazzarrone]]
+[[pl:Mazzarrone]]
+[[pt:Mazzarrone]]
+[[ru:Маццарроне]]
+[[scn:Mazzarruni (CT)]]
+[[uk:Маццарроне]]
+[[vi:Mazzarrone]]
+[[vo:Mazzarrone]]
