Bot: Aggiungo: de, en, eo, fr, it, ja, lmo, nap, nl, pl, pt, ru, uk, vi, vo

--- a/Medolago.mw
+++ b/Medolago.mw
@@ -1,3 +1,19 @@
 {{S}}
 '''Medolago''' éte 'nu comune [[Italie|tagliáne]] de 2.477 crestiáne.
 [[Category:Gëografije]]
+
+[[de:Medolago]]
+[[en:Medolago]]
+[[eo:Medolago]]
+[[fr:Medolago]]
+[[it:Medolago]]
+[[ja:メドラーゴ]]
+[[lmo:Medulàch]]
+[[nap:Medolago]]
+[[nl:Medolago]]
+[[pl:Medolago]]
+[[pt:Medolago]]
+[[ru:Медолаго]]
+[[uk:Медолаго]]
+[[vi:Medolago]]
+[[vo:Medolago]]
