Bot: Aggiungo: en, eo, fr, it, ja, nap, nl, pl, pt, ru, uk, vec, vi, vo

--- a/Medolla.mw
+++ b/Medolla.mw
@@ -1,3 +1,18 @@
 {{S}}
 '''Medolla''' éte 'nu comune [[Italie|tagliáne]] de 5.901 crestiáne.
 [[Category:Gëografije]]
+
+[[en:Medolla]]
+[[eo:Medolla]]
+[[fr:Medolla]]
+[[it:Medolla]]
+[[ja:メドッラ]]
+[[nap:Medolla]]
+[[nl:Medolla]]
+[[pl:Medolla]]
+[[pt:Medolla]]
+[[ru:Медолла]]
+[[uk:Медолла]]
+[[vec:Medoła]]
+[[vi:Medolla]]
+[[vo:Medolla]]
