Bot: Aggiungo: en, eo, fr, id, it, ja, ms, nap, nl, pl, pt, ru, uk, vec, vi, vo

--- a/Medole.mw
+++ b/Medole.mw
@@ -1,3 +1,20 @@
 {{S}}
 '''Medole''' éte 'nu comune [[Italie|tagliáne]] de 3.316 crestiáne.
 [[Category:Gëografije]]
+
+[[en:Medole]]
+[[eo:Medole]]
+[[fr:Medole]]
+[[id:Medole]]
+[[it:Medole]]
+[[ja:メードレ]]
+[[ms:Medole]]
+[[nap:Medole]]
+[[nl:Medole]]
+[[pl:Medole]]
+[[pt:Medole]]
+[[ru:Медоле]]
+[[uk:Медоле]]
+[[vec:Medołe]]
+[[vi:Medole]]
+[[vo:Medole]]
