Bot: Aggiungo: de, en, eo, fr, id, it, ja, nap, nl, pl, pms, pt, uk, vi, vo

--- a/Meina.mw
+++ b/Meina.mw
@@ -1,3 +1,19 @@
 {{S}}
 '''Meina''' éte 'nu comune [[Italie|tagliáne]] de 2.439 crestiáne.
 [[Category:Gëografije]]
+
+[[de:Meina]]
+[[en:Meina]]
+[[eo:Meina]]
+[[fr:Meina]]
+[[id:Meina]]
+[[it:Meina]]
+[[ja:メイナ]]
+[[nap:Meina]]
+[[nl:Meina]]
+[[pl:Meina]]
+[[pms:Mèina]]
+[[pt:Meina]]
+[[uk:Меїна]]
+[[vi:Meina]]
+[[vo:Meina]]
