Bot: Aggiungo: de, en, eo, fr, id, it, ja, nap, nl, pl, pms, pt, uk, vi, vo

--- a/Melazzo.mw
+++ b/Melazzo.mw
@@ -1,3 +1,19 @@
 {{S}}
 '''Melazzo''' éte 'nu comune [[Italie|tagliáne]] de 1.262 crestiáne.
 [[Category:Gëografije]]
+
+[[de:Melazzo]]
+[[en:Melazzo]]
+[[eo:Melazzo]]
+[[fr:Melazzo]]
+[[id:Melazzo]]
+[[it:Melazzo]]
+[[ja:メラッツォ]]
+[[nap:Melazzo]]
+[[nl:Melazzo]]
+[[pl:Melazzo]]
+[[pms:Melass]]
+[[pt:Melazzo]]
+[[uk:Мелаццо]]
+[[vi:Melazzo]]
+[[vo:Melazzo]]
