Bot: Aggiungo: eml, en, eo, fr, it, ja, nap, nl, pl, pms, pt, ru, uk, vec, vi, vo, zh

--- a/Melara.mw
+++ b/Melara.mw
@@ -1,3 +1,21 @@
 {{S}}
 '''Melara''' éte 'nu comune [[Italie|tagliáne]] de 1.927 crestiáne.
 [[Category:Gëografije]]
+
+[[eml:Mlàra]]
+[[en:Melara]]
+[[eo:Melara]]
+[[fr:Melara]]
+[[it:Melara]]
+[[ja:メラーラ]]
+[[nap:Melara]]
+[[nl:Melara]]
+[[pl:Melara]]
+[[pms:Melara]]
+[[pt:Melara]]
+[[ru:Мелара]]
+[[uk:Мелара]]
+[[vec:Melara]]
+[[vi:Melara]]
+[[vo:Melara]]
+[[zh:梅拉拉]]
