Bot: Aggiungo: eml, en, eo, fr, it, ja, nap, nl, pl, pms, pt, ru, uk, vec, vo, zh

--- a/Meldola.mw
+++ b/Meldola.mw
@@ -1,3 +1,20 @@
 {{S}}
 '''Meldola''' éte 'nu comune [[Italie|tagliáne]] de 9.774 crestiáne.
 [[Category:Gëografije]]
+
+[[eml:Mèidla]]
+[[en:Meldola]]
+[[eo:Meldola]]
+[[fr:Meldola]]
+[[it:Meldola]]
+[[ja:メルドラ]]
+[[nap:Meldola]]
+[[nl:Meldola]]
+[[pl:Meldola]]
+[[pms:Meldola]]
+[[pt:Meldola]]
+[[ru:Мельдола]]
+[[uk:Мельдола]]
+[[vec:Meldoła]]
+[[vo:Meldola]]
+[[zh:梅尔多拉]]
