Bot: Aggiungo: en, eo, fr, hu, it, ja, nap, nl, pl, pt, scn, uk, vo

--- a/Melendugno.mw
+++ b/Melendugno.mw
@@ -4,3 +4,17 @@
 [[Category:Comune d'a Pugghie]]
 [[Category:Comune d'a provinge de Lecce]]
 {{Provinge de Lecce}}
+
+[[en:Melendugno]]
+[[eo:Melendugno]]
+[[fr:Melendugno]]
+[[hu:Melendugno]]
+[[it:Melendugno]]
+[[ja:メレンドゥーニョ]]
+[[nap:Melendugno]]
+[[nl:Melendugno]]
+[[pl:Melendugno]]
+[[pt:Melendugno]]
+[[scn:Melendugnu (LE)]]
+[[uk:Мелендуньо]]
+[[vo:Melendugno]]
