Bot: Aggiungo: de, el, en, eo, es, fr, hu, it, ja, nap, nl, pl, pms, pt, ru, scn, uk, vo

--- a/Melfi.mw
+++ b/Melfi.mw
@@ -7,3 +7,22 @@ A '''Melfi''' stè 'nu granne stabbilimende d'a [[Fiat S.p.A.|Fiat]] ca produce 
 [[Category:Comune d'a provinge de Putènze]]
 [[Category:Comune d'a Basilicata]]
 {{Provinge de Putènze}}
+
+[[de:Melfi]]
+[[el:Μέλφι]]
+[[en:Melfi]]
+[[eo:Melfi]]
+[[es:Melfi]]
+[[fr:Melfi (Italie)]]
+[[hu:Melfi]]
+[[it:Melfi]]
+[[ja:メルフィ]]
+[[nap:Melfi]]
+[[nl:Melfi]]
+[[pl:Melfi]]
+[[pms:Melfi]]
+[[pt:Melfi]]
+[[ru:Мельфи]]
+[[scn:Melfi]]
+[[uk:Мельфі]]
+[[vo:Melfi]]
