Bot: Aggiungo: de, en, eo, es, fr, it, ja, nap, nl, pl, pms, pt, ru, scn, uk, vi, vo

--- a/Melilli.mw
+++ b/Melilli.mw
@@ -4,3 +4,21 @@
 [[Category:Comune d'a Sicilia]]
 [[Category:Comune d'a provinge de Siracusa]]
 {{Provinge de Siracusa}}
+
+[[de:Melilli]]
+[[en:Melilli]]
+[[eo:Melilli]]
+[[es:Melilli]]
+[[fr:Melilli]]
+[[it:Melilli]]
+[[ja:メリッリ]]
+[[nap:Melilli]]
+[[nl:Melilli]]
+[[pl:Melilli]]
+[[pms:Melilli]]
+[[pt:Melilli]]
+[[ru:Мелилли]]
+[[scn:Miliddi (SR)]]
+[[uk:Меліллі]]
+[[vi:Melilli]]
+[[vo:Melilli]]
