Bot: Aggiungo: de, en, eo, fr, hu, it, ja, nap, nl, pl, pt, scn, uk, vi, vo

--- a/Melicuccà.mw
+++ b/Melicuccà.mw
@@ -4,3 +4,19 @@
 [[Category:Comune d'a Calavrie]]
 [[Category:Comune d'a provinge de Reggio Calavrie]]
 {{Provinge de Reggio Calavrie}}
+
+[[de:Melicuccà]]
+[[en:Melicuccà]]
+[[eo:Melicuccà]]
+[[fr:Melicuccà]]
+[[hu:Melicuccà]]
+[[it:Melicuccà]]
+[[ja:メリクッカ]]
+[[nap:Melicuccà]]
+[[nl:Melicuccà]]
+[[pl:Melicuccà]]
+[[pt:Melicuccà]]
+[[scn:Milicuccà (RC)]]
+[[uk:Мелікукка]]
+[[vi:Melicuccà]]
+[[vo:Melicuccà]]
