Bot: Aggiungo: en, eo, fr, hu, it, ja, nap, nl, pl, pt, ru, scn, uk, vi, vo

--- a/Melicucco.mw
+++ b/Melicucco.mw
@@ -4,3 +4,19 @@
 [[Category:Comune d'a Calavrie]]
 [[Category:Comune d'a provinge de Reggio Calavrie]]
 {{Provinge de Reggio Calavrie}}
+
+[[en:Melicucco]]
+[[eo:Melicucco]]
+[[fr:Melicucco]]
+[[hu:Melicucco]]
+[[it:Melicucco]]
+[[ja:メリクッコ]]
+[[nap:Melicucco]]
+[[nl:Melicucco]]
+[[pl:Melicucco]]
+[[pt:Melicucco]]
+[[ru:Меликукко]]
+[[scn:Melicuccu (RC)]]
+[[uk:Мелікукко]]
+[[vi:Melito di Porto Salvo]]
+[[vo:Melicucco]]
