Bot: Aggiungo: en, eo, es, fr, hu, it, ja, mk, nap, nl, pl, pt, ru, uk, vo

--- a/Melito_Irpino.mw
+++ b/Melito_Irpino.mw
@@ -4,3 +4,19 @@
 [[Category:Comune d'a Campania]]
 [[Category:Comune d'a provinge de Avellino]]
 {{Provinge de Avellino}}
+
+[[en:Melito Irpino]]
+[[eo:Melito Irpino]]
+[[es:Melito Irpino]]
+[[fr:Melito Irpino]]
+[[hu:Melito Irpino]]
+[[it:Melito Irpino]]
+[[ja:メリート・イルピーノ]]
+[[mk:Мелито Ирпино]]
+[[nap:Melito Irpino]]
+[[nl:Melito Irpino]]
+[[pl:Melito Irpino]]
+[[pt:Melito Irpino]]
+[[ru:Мелито-Ирпино]]
+[[uk:Меліто-Ірпіно]]
+[[vo:Melito Irpino]]
