Bot: Aggiungo: en, eo, fr, hu, it, ja, nap, nl, pl, pt, roa-rup, scn, uk, vo

--- a/Melissano.mw
+++ b/Melissano.mw
@@ -4,3 +4,18 @@
 [[Category:Comune d'a Pugghie]]
 [[Category:Comune d'a provinge de Lecce]]
 {{Provinge de Lecce}}
+
+[[en:Melissano]]
+[[eo:Melissano]]
+[[fr:Melissano]]
+[[hu:Melissano]]
+[[it:Melissano]]
+[[ja:メリッサーノ]]
+[[nap:Melissano]]
+[[nl:Melissano]]
+[[pl:Melissano]]
+[[pt:Melissano]]
+[[roa-rup:Melissano]]
+[[scn:Melissanu (LE)]]
+[[uk:Меліссано]]
+[[vo:Melissano]]
